--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "ptest",
+  "name": "my-project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "chart.js": "^1.1.1",
+    "react": "^16.9.0",
+    "react-chartjs": "^1.2.0",
+    "react-dom": "^16.9.0",
+    "react-scripts": "3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
